--- a/client/moms_best/src/index.css
+++ b/client/moms_best/src/index.css
@@ -1,68 +1,109 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@import "tailwindcss";
+@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+html{
+  scroll-behavior: smooth;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
+body{
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  padding: 0;
+  @apply bg-background text-foreground;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+/* Light theme color variables */
+:root {
+  --foreground: #171717;
+  --background: #ffffff;
+  --primary-50: oklch(0.05 0.0497 207.5);
+  --primary-100: oklch(0.1 0.0497 207.5);
+  --primary-200: oklch(0.2 0.0497 207.5);
+  --primary-300: oklch(0.3 0.0497 207.5);
+  --primary-400: oklch(0.4 0.0497 207.5);
+  --primary-500: oklch(0.5 0.0497 207.5);
+  --primary-600: oklch(0.6 0.0497 207.5);
+  --primary-700: oklch(0.7 0.0497 207.5);
+  --primary-800: oklch(0.8 0.0497 207.5);
+  --primary-900: oklch(0.9 0.0497 207.5);
+  --secondary-50: oklch(0.05 0.034 261.69);
+  --secondary-100: oklch(0.1 0.034 261.69);
+  --secondary-200: oklch(0.2 0.034 261.69);
+  --secondary-300: oklch(0.3 0.034 261.69);
+  --secondary-400: oklch(0.4 0.034 261.69);
+  --secondary-500: oklch(0.5 0.034 261.69);
+  --secondary-600: oklch(0.6 0.034 261.69);
+  --secondary-700: oklch(0.7 0.034 261.69);
+  --secondary-800: oklch(0.8 0.034 261.69);
+  --secondary-900: oklch(0.9 0.034 261.69);
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+/* Dark theme color variables */
+/* It is reversed values of the light theme */
+[data-theme='dark'] {
+  --foreground: #ffffff;
+  --background: #171717;
+  --primary-50: oklch(0.9 0.0497 207.5);
+  --primary-100: oklch(0.8 0.0497 207.5);
+  --primary-200: oklch(0.7 0.0497 207.5);
+  --primary-300: oklch(0.6 0.0497 207.5);
+  --primary-400: oklch(0.5 0.0497 207.5);
+  --primary-500: oklch(0.4 0.0497 207.5);
+  --primary-600: oklch(0.3 0.0497 207.5);
+  --primary-700: oklch(0.2 0.0497 207.5);
+  --primary-800: oklch(0.1 0.0497 207.5);
+  --primary-900: oklch(0.05 0.0497 207.5);
+  --secondary-50: oklch(0.9 0.034 261.69);
+  --secondary-100: oklch(0.8 0.034 261.69);
+  --secondary-200: oklch(0.7 0.034 261.69);
+  --secondary-300: oklch(0.6 0.034 261.69);
+  --secondary-400: oklch(0.5 0.034 261.69);
+  --secondary-500: oklch(0.4 0.034 261.69);
+  --secondary-600: oklch(0.3 0.034 261.69);
+  --secondary-700: oklch(0.2 0.034 261.69);
+  --secondary-800: oklch(0.1 0.034 261.69);
+  --secondary-900: oklch(0.05 0.034 261.69);
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+/* Global Themes */
+@theme inline {
+  --color-background: var(--background);
+  --color-foreground: var(--foreground);
+  --font-sans: var(--font-geist-sans);
+  --font-mono: var(--font-geist-mono);
+}
+
+@theme {
+  --color-primary-50: var(--primary-50);
+  --color-primary-100: var(--primary-100);
+  --color-primary-200: var(--primary-200);
+  --color-primary-300: var(--primary-300);
+  --color-primary-400: var(--primary-400);
+  --color-primary-500: var(--primary-500);
+  --color-primary-600: var(--primary-600);
+  --color-primary-700: var(--primary-700);
+  --color-primary-800: var(--primary-800);
+  --color-primary-900: var(--primary-900);
+  --color-secondary-50: var(--secondary-50);
+  --color-secondary-100: var(--secondary-100);
+  --color-secondary-200: var(--secondary-200);
+  --color-secondary-300: var(--secondary-300);
+  --color-secondary-400: var(--secondary-400);
+  --color-secondary-500: var(--secondary-500);
+  --color-secondary-600: var(--secondary-600);
+  --color-secondary-700: var(--secondary-700);
+  --color-secondary-800: var(--secondary-800);
+  --color-secondary-900: var(--secondary-900);
+}
+
+@layer {
+  .page{
+    @apply mx-4 mb-20 min-h-screen
   }
-  a:hover {
-    color: #747bff;
+
+  .divider {
+    @apply border-foreground/20
   }
-  button {
-    background-color: #f9f9f9;
+  .hover-content{
+    @apply ease-in-out duration-300 hover:shadow-md hover:shadow-foreground/20 border border-foreground/30 rounded-md p-4
   }
 }
