--- a/client/src/index.css
+++ b/client/src/index.css
@@ -104,7 +104,7 @@ body {
 
 @layer {
   .page {
-    @apply mx-4 mb-20 h-[79vh] min-h-screen;
+    @apply px-4 mb-20 h-[79vh] min-h-screen;
   }
 
   .divider {
