--- a/client/src/index.css
+++ b/client/src/index.css
@@ -102,22 +102,6 @@ body {
   --font-mono: var(--font-geist-mono);
 }
 
-@layer {
-  .page {
-    @apply px-4 mb-20 h-[79vh] min-h-screen;
-  }
-
-  .divider {
-    @apply border-foreground/20;
-  }
-  .hover-content {
-    @apply ease-in-out duration-300 hover:shadow-md hover:shadow-foreground/20 border border-foreground/30 rounded-md p-4;
-  }
-  .two-column {
-    @apply grid grid-cols-1 md:grid-cols-2 gap-4;
-  }
-}
-
 @theme inline {
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
@@ -196,5 +180,21 @@ body {
   }
   body {
     @apply bg-background text-foreground;
+  }
+}
+
+@layer {
+  .page {
+    @apply px-4 h-full md:h-[81vh] lg:max-w-3/4 mx-auto overflow-y-auto;
+  }
+
+  .divider {
+    @apply border-foreground/20;
+  }
+  .hover-content {
+    @apply ease-in-out duration-300 hover:shadow-md hover:shadow-foreground/20 border border-foreground/30 rounded-md p-4;
+  }
+  .two-column {
+    @apply grid grid-cols-1 md:grid-cols-2 gap-4;
   }
 }
